--- a/cattle-agent-ds.yml
+++ b/cattle-agent-ds.yml
@@ -1,5 +1,5 @@
 apiVersion: v1
-items: ### Disclaimer, I'm not a valid daemonSet, this is just here to show you where to edit the file so that cattle-agents 
+items: ### Disclaimer, I'm not a valid daemonSet, this is just here to show you where to edit the file so that cattle-agents will run.
 - apiVersion: extensions/v1beta1
   kind: DaemonSet
   metadata:
